--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@ numpy==1.10.4
 openpyxl==2.3.4
 matplotlib==1.5.1
 scikit-learn==0.17.1
+statsmodels==0.6.1
+pandas==0.18.0
+patsy==0.4.1
 scipy==0.17.0
